stateDiagram-v2
    [*] --> INTRO: RESET
    INTRO --> MAIN_MENU: TO_MENU
    GAME_LOBBY --> MAIN_MENU: EXIT
    MAIN_MENU --> JOIN_REQUEST: JOIN_GAME
    JOIN_REQUEST --> MAIN_MENU: CANCEL
    JOIN_REQUEST --> GAME_LOBBY: REQUEST_ACCEPTED
    MAIN_MENU --> GAME_LOBBY: CREATE_GAME
    GAME_LOBBY --> GAME_STARTING: START_GAME
    GAME_STARTING --> IN_GAME: [-]
    IN_GAME --> SCORE_SCREEN: END_GAME
    IN_GAME --> MAIN_MENU: ERROR
    IN_GAME --> MAIN_MENU: EXIT
    SCORE_SCREEN --> MAIN_MENU: EXIT

note right of [*]
inject/getPlayerId
#{playerId = getPlayerId()}
subscribe/intro_complete TO_MENU
subscribe/cancel_game_request CANCEL
subscribe/request_accepted REQUEST_ACCEPTED (#gameId)
subscribe/lobby_created CREATE_GAME (#gameId)
subscribe/game_start START_GAME (#gameId, #playerIds)
subscribe/game_end END_GAME (#scoreBoard)
subscribe/player_exit EXIT
subscribe/player_cancel CANCEL
end note

note right of INTRO
+Init
end note

note left of GAME_LOBBY
#{gameId, isHost = 0} <= $gameId, $isHost
emit/join_lobby (#gameId, #playerId, #isHost)
end note

note right of JOIN_REQUEST
#{gameId} <= $gameId
emit/join_game_request (#gameId, #playerId)
end note

note left of GAME_STARTING
+ByPass
#{gameId, playerIds} <= $gameId, $playerIds
emit/game_started (#gameId, #playerIds)
end note

note right of SCORE_SCREEN
#{scoreBoard} <= $scoreBoard
end note